--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jasmine": "^3.3.12",
     "httpbackend": "^2.0.0",
     "xmlhttprequest": "^1.8.0"
   },
   "dependencies": {
-    "npm": "^5.7.1",
+    "es6-promise": "^4.2.6",
+    "isomorphic-fetch": "^2.2.1",
+    "npm": "^5.10.0",
+    "request": "^2.88.0",
+    "superagent": "^4.1.0",
     "to": "^0.2.9",
     "update": "^0.7.4"
   }
-  
 }
